<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.moviedetail.MovieDetailFragment">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_background"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/str_img_background" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient" />

    </FrameLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="120dp"
        android:layout_height="170dp"
        android:clipToPadding="true"
        app:cardCornerRadius="8dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guideline">

        <ImageView
            android:id="@+id/img_movie"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher"/>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="339dp" />

    <TextView
        android:id="@+id/txt_movie_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/cardview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="MOVIE TITLE"/>

    <TextView
        android:id="@+id/txt_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:textColor="@color/white"
        app:drawableStartCompat="@drawable/ic_baseline_star_border_24"
        app:drawableTint="@color/white"
        app:layout_constraintStart_toStartOf="@+id/txt_release"
        app:layout_constraintTop_toTopOf="@id/cardview"
        tools:text="7.1 (1000 Reviews)" />

    <TextView
        android:id="@+id/txt_release"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:textColor="@color/white"
        app:drawableStartCompat="@drawable/ic_baseline_calendar_today_24"
        app:drawableTint="@color/white"
        app:layout_constraintStart_toEndOf="@id/cardview"
        app:layout_constraintTop_toBottomOf="@id/txt_rating"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Released 23-01-23" />

    <TextView
        android:id="@+id/txt_languaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textColor="@color/white"
        app:drawableStartCompat="@drawable/ic_baseline_language_24"
        app:drawableTint="@color/white"
        app:layout_constraintStart_toStartOf="@+id/txt_release"
        app:layout_constraintTop_toBottomOf="@+id/txt_release"
        tools:text="Languaje ES" />

    <LinearLayout
        android:id="@+id/linear_bookmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/linear_favourite"
        app:layout_constraintStart_toEndOf="@id/cardview"
        app:layout_constraintTop_toBottomOf="@id/frameLayout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_bookmark_border_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_bookmark" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_favourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@id/linear_share"
        app:layout_constraintStart_toEndOf="@id/linear_bookmark"
        app:layout_constraintTop_toBottomOf="@id/frameLayout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_favorite_border_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_favourite" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout"
        app:layout_constraintStart_toEndOf="@+id/linear_favourite"
        app:layout_constraintTop_toBottomOf="@id/frameLayout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_share_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_share" />
    </LinearLayout>

    <TextView
        android:id="@+id/title_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_overview"
        android:padding="16dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline"/>

    <TextView
        android:id="@+id/txt_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="fill_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_overview"
        tools:text="@string/str_lorem_ipsum"/>

</androidx.constraintlayout.widget.ConstraintLayout>